--- a/src/2-form.html
+++ b/src/2-form.html
@@ -11,10 +11,25 @@
     <main>
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">Form</h1>
+        <h1 class="main-title">Feedback Form</h1>
+
+        <section class="feedback-section">
+          <form class="feedback-form" autocomplete="off">
+            <label class="form-label">
+              Email
+              <input type="email" name="email" autofocus />
+            </label>
+
+            <label class="form-label">
+              Message
+              <textarea name="message" rows="8"></textarea>
+            </label>
+
+            <button type="submit">Submit</button>
+          </form>
+        </section>
       </div>
     </main>
-
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
